added moment.js and clear button clears localStorage

--- a/assets/style.css
+++ b/assets/style.css
@@ -10,7 +10,7 @@ h1 {
 .left-col{
     background-color: darksalmon;
 }
-.btn{
+#btn-9,#btn-10,#btn-11,#btn-12,#btn-1,#btn-2,#btn-3,#btn-4,#btn-5{
 
         content: "";
     
