js logic for past present and future fixed

--- a/assets/style.css
+++ b/assets/style.css
@@ -36,5 +36,5 @@ h1 {
     background-color: rgb(32, 151, 32);
 }
 .present{
-    background-color: darkslateblue;
+    background-color: rgb(255, 252, 102);
 }
